# leaflet-cnpois

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
01_crawl_poi/: pyproject.toml
02_poi_leaflet/src/: App.js
LocationInterestDetection/: .project  settings.gradle
LocationInterestDetection/app/: .project  build.gradle
LocationInterestDetection/gradle/wrapper/: gradle-wrapper.properties
aoi/: README.md
aoi/01_mark_polygons/: example_island_polygons.geojson
aoi/02_to_sqlite_db/: convert_merged_geojson_to_geodata.py
aoi/IslandDetection/: settings.gradle
aoi/IslandDetection/app/: build.gradle
archive/00_get_cnpois_from_apikey/: README.md  json_to_csv.py  pyproject.toml
archive/00_get_cnpois_from_apikey/baidu_pois/: items.py  settings.py
archive/00_get_cnpois_from_apikey/baidu_pois/spiders/: pois.py
crawl_poi/: .pip_requirents_3_9  README.md  crawl_poi.py  merge_output.py
poi/: README.md
poi/01_crawl_poi/: README.md  crawl_poi.py
poi/01_crawl_raw_pois/: crawl_raw_pois.py  merge_output.py
poi/02_poi_leaflet/: package.json
poi/02_to_geojson_pois/: convert_crawled_pois_to_geojson.py  coordinate_coverter.py  大学.json  高铁站.json
poi/03_merge_geojson_pois/: merge_geojson.py
poi/04_add_geohash/: add_geohash.py
poi/04_to_sqlite3_db/: convert_merged_geojson_to_geodata.py
poi/05_to_sqlite3_db/: convert_merged_geojson_to_geodata.py
poi/09_poi_leaflet/: README.md
poi/09_poi_leaflet/src/: App.js
poi/archive/00_get_cnpois_from_apikey/: scrapy.cfg
src/: coordinateConversion.js  index.css  poi.json
(+36 files in other folders)
