[tool.poetry]
name = "crawl-poi"
version = "0.1.0"
description = ""
authors = ["Shangjin Tang <shangjin.tang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
selenium = "^4.16.0"
bs4 = "^0.0.1"
requests = "^2.31.0"
numpy = "^1.26.3"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
