[tool.poetry]
name = "get-cnpois-from-apikey"
version = "0.1.0"
description = ""
authors = ["Shangjin Tang <shangjin.tang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
